--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -12,23 +12,27 @@
     <% } %>
 </div>    
 
-<form method="post" action="/contact" novalidate>
+<form method="post" action="/contact?_csrf=<%= csrfToken %>" novalidate enctype="multipart/form-data">
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class="form-field <%= errors.message ? 'form-field-invalid' : '' %>">
-        <label for="message">Message</label>
-        <textarea class="input" id="message" name="message" rows="4" autofocus><%= data.message %></textarea>
-        <% if (errors.message) { %>
+      <label for="message">Message</label>
+      <textarea class="input" id="message" name="message" rows="4" autofocus><%= data.message %></textarea>
+      <% if (errors.message) { %>
         <div class="error"><%= errors.message.msg %></div>
-        <% } %>
+      <% } %>
     </div>
     <div class="form-field <%= errors.email ? 'form-field-invalid' : '' %>">
-        <label for="email">Email</label>
-        <input class="input" id="email" name="email" type="email" value="<%= data.email %>" />
-        <% if (errors.email) { %>
+      <label for="email">Email</label>
+      <input class="input" id="email" name="email" type="email" value="<%= data.email %>" />
+      <% if (errors.email) { %>
         <div class="error"><%= errors.email.msg %></div>
-        <% } %>
+      <% } %>
+    </div>
+    <div class="form-field">
+      <label for="photo">Photo</label>
+      <input class="input" id="photo" name="photo" type="file" />
     </div>
     <div class="form-actions">
-        <button class="btn" type="submit">Send</button>
+      <button class="btn" type="submit">Send</button>
     </div>
 </form>
